--- a/html/C/authsvc/authenticator/ci/try_push.html
+++ b/html/C/authsvc/authenticator/ci/try_push.html
@@ -3,112 +3,19 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="/sps/static/design.css"></link>
-    <link rel="stylesheet" type="text/css" href="/sps/static/ci.css"></link>
-    <link rel="stylesheet" type="text/css" href="/sps/static/ci-popup.css"></link>
-    <script src="/sps/static/ciI18n.js"></script>
-    <script src="/sps/mga/user/mgmt/html/common.js" type="text/javascript"></script>
-    <script type="text/javascript">
-
-    var deviceName = "@DEVICE_NAME@";
-
-    function submitDone() {
-        document.getElementById("doneForm").action = actionLocation.replace("apiauthsvc", "authsvc");
-        document.getElementById("doneForm").submit();
-    }
-
-    var pollCount = 30;
-    var action = "@ACTION@";
-    var actionLocation = "";
-
-    function poll() {
-        if(pollCount > 0) {
-            var data = {"action":"poll"};
-            var pollRequest = new XMLHttpRequest();
-            pollRequest.onreadystatechange =  function() {processPollRequest(pollRequest);};
-            pollRequest.open("PUT", actionLocation, true);
-            pollRequest.setRequestHeader("Accept", "application/json");
-            pollRequest.setRequestHeader("Content-Type", "application/json");
-            pollRequest.send(JSON.stringify(data));
-            pollCount--;
-        }
-    }
-
-    function processPollRequest(request) {
-        if (request.readyState == 4) {
-            var json = null;
-            if(request.responseText) {
-                try {
-                    json = JSON.parse(request.responseText);
-                } catch (e) {
-                    // probably not JSON -- handle in else.
-                }
-            }
-            if(request.status == 200 && json != null) {
-                if(json.location != null && json.location != "") {
-                    actionLocation = json.location;
-                }
-                if(json.status == "success") {
-                    showDone();
-                } else if(json.status == "pending") {
-                    setTimeout(poll, 2000);
-                } else {
-                    // We most likely got an error when trying to poll.
-                    // Stop polling by setting pollCount to 0.
-                    pollCount = 0;
-                }
-            } else {
-                // We most likely got an error when trying to poll.
-                // Stop polling by setting pollCount to 0.
-                pollCount = 0;
-                if (json != null && json.location != null && json.location != "") {
-                    actionLocation = json.location;
-                }
-            }
-        }
-    }
-
-    function showDone() {
-        document.getElementById("try-section").classList.remove('dialog-content--visible');
-        document.getElementById("try-section").classList.add('dialog-content--hidden');
-        setTimeout(function () {
-            document.getElementById("try-section").style.left = '-100%';
-        }, 300);
-        document.getElementById("done-section").style.left = '';
-        document.getElementById("done-section").classList.add('dialog-content--visible');
-    }
-
-    function populateStrings() {
-        document.title = ciMsg.ibmVerify;
-        document.querySelector('#try-section h3').textContent = ciMsg.twoStepVeri;
-        document.querySelector('#try-section h1').textContent = ciMsg.letsTry;
-        document.querySelector('#try-section p').textContent = ciMsg.notificationSent.replace("DEVICE_NAME", "@DEVICE_NAME@");
-        document.querySelector('#done-section h3').textContent = ciMsg.success;
-        document.querySelector('#done-section h1').textContent = ciMsg.deviceConnected;
-        if(deviceName != null && deviceName != "") {
-            document.querySelector('#done-section p').textContent = ciMsg.deviceReady.replace("DEVICE_NAME", deviceName)
-        } else {
-            document.querySelector('#done-section p').textContent = ciMsg.authenticatorReady;
-        }
-        document.querySelector("#done-section .button-bottom").textContent = ciMsg.done;
-    }
-
-    function startup() {
-        populateStrings();
-
-        actionLocation = getJunctionName() + action;
-        actionLocation = actionLocation.replace("authsvc", "apiauthsvc");
-        setTimeout(poll, 2000);
-    }
-    </script>
-
-    <style>
-        a {color: #0F6DFF !important;}
-    </style>
+    <link type="text/css" rel="stylesheet" href="/sps/static/design.css"></link>
+    <link type="text/css" rel="stylesheet" href="/sps/static/ci.css"></link>
+    <link type="text/css" rel="stylesheet" href="/sps/static/ci-popup.css"></link>
+    <link type="text/css" rel="stylesheet" href="/sps/static/css/ci/try_push.css"></link>
+    <link type="text/css" rel="stylesheet" href="/sps/static/css/ci/common.css"></link>
+    
+    <script type="text/javascript" src="/sps/static/ciI18n.js"></script>
+    <script type="text/javascript" src="/sps/mga/user/mgmt/html/common.js"></script>
+    <script type="text/javascript" src="/sps/static/scripts/ci/try_push.js" data-device-name="@DEVICE_NAME@" data-action="@ACTION@"></script>
   </head>
-  <body onload="startup()">
-    <div id="dialog" style="z-index: 2000; box-sizing: initial; display: block;">
-        <div class="dialog-window notransition" style="z-index: 2000;">
+  <body>
+    <div id="dialog">
+        <div class="dialog-window notransition">
             <section id="try-section" class="dialog-content dialog-content--visible notransition">
                 <div class="layout-large-right">
                     <h3></h3><!-- Set up two-step verification -->
@@ -116,7 +23,7 @@
                     <p class="type-body-m"></p><!-- A notification was sent to DEVICE_NAME. Approve the sign-in to continue. If you haven't received it yet, open IBM Verify. -->
 
                 </div>
-                <div class="layout-left" style="background-color:#1d3649;">
+                <div class="layout-left">
                     <div class="welcome-illustrations">
                         <div class="loader loader-dark hidden"></div>
                     </div>
@@ -128,9 +35,9 @@
                     <h1></h1><!-- Your device is connected -->
                     <p class="type-body-m"></p><!-- Now you can use DEVICE_NAME to verify your identity as a second step when signing in. -->
 
-                    <button onclick="submitDone();" class="button-1 button-bottom" type="button" tabindex="1"></button><!-- Done -->
+                    <button id="button-1" class="button-1 button-bottom" type="button" tabindex="1"></button><!-- Done -->
                 </div>
-                <div class="layout-left" style="background-color:#1d3649;">
+                <div class="layout-left">
                     <div class="welcome-illustrations">
                         <img src="@JUNCTION@/sps/static/design_images/devices_verify.svg" class="launch-animation" />
                     </div>
