--- a/html/C/authsvc/authenticator/ci/username.html
+++ b/html/C/authsvc/authenticator/ci/username.html
@@ -3,65 +3,30 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="/sps/static/design.css"></link>
-    <link rel="stylesheet" type="text/css" href="/sps/static/ci.css"></link>
-    <link rel="stylesheet" type="text/css" href="/sps/static/ci-popup.css"></link>
-    <script src="/sps/static/ciI18n.js"></script>
-    <script src="/sps/mga/user/mgmt/html/common.js" type="text/javascript"></script>
-    <script type="text/javascript">
-    function populateStrings() {
-        document.title = ciMsg.signIn;
-        document.querySelector("h3").textContent = ciMsg.welcome;
-        document.querySelector("h1").textContent = ciMsg.signIn;
-        document.getElementById("submit_button").textContent = ciMsg.signIn;
-        document.getElementById("instructions").textContent = ciMsg.usernameInstructions;
-        document.getElementById("username").placeholder = ciMsg.username;
-        document.querySelectorAll("p")[1].textContent = ciMsg.username;
-    }
-
-    function enableButton(text) {
-        if(text.value != null && text.value != "" && text.validity.valid) {
-            document.getElementById("submit_button").disabled = false;
-        } else {
-            document.getElementById("submit_button").disabled = true;
-        }
-    }
-
-    function submit() {
-        document.querySelector(".loader").classList.remove('hidden');
-        document.querySelector(".welcome-illustrations .launch-animation").classList.add('hidden');
-        document.getElementById("submitForm").username.value = document.getElementById("username").value;
-        document.getElementById("submitForm").submit();
-    }
-
-    function startup() {
-        populateStrings();
-
-        var input = document.querySelector('#username');
-        input.addEventListener("keyup", function(event) {
-            event.preventDefault();
-            // Enter key is 13
-            if (event.keyCode === 13) {
-                document.querySelector('#submit_button').click();
-            }
-        });
-    }
-    </script>
+    <link type="text/css" rel="stylesheet" href="/sps/static/design.css"></link>
+    <link type="text/css" rel="stylesheet" href="/sps/static/ci.css"></link>
+    <link type="text/css" rel="stylesheet" href="/sps/static/ci-popup.css"></link>
+    <link type="text/css" rel="stylesheet" href="/sps/static/css/ci/username.css"></link>
+    <link type="text/css" rel="stylesheet" href="/sps/static/css/ci/common.css"></link>
+    
+    <script type="text/javascript" src="/sps/static/ciI18n.js"></script>
+    <script type="text/javascript" src="/sps/mga/user/mgmt/html/common.js"></script>
+    <script type="text/javascript" src="/sps/static/scripts/ci/username.js"></script>
   </head>
-  <body onload="startup()">
-    <div id="dialog" style="z-index: 2000; box-sizing: initial; display: block;">
-        <div class="dialog-window notransition" style="z-index: 2000;">
+  <body>
+    <div id="dialog">
+        <div class="dialog-window notransition">
             <section id="try-section" class="dialog-content dialog-content--visible notransition">
                 <div class="layout-large-right">
                     <h3></h3><!-- Welcome! -->
                     <h1></h1><!-- Sign in -->
                     <p id="instructions" class="type-body-m"></p>
 
-                    <p style="margin-top:40px;margin-bottom:8px;font-size:8pt"></p><!-- Username -->
-                    <input class="ci-input" type="text" name="username" id="username" maxlength="40" required="true" oninput="enableButton(this)" value="@USERNAME@" autofocus/>
-                    <button id="submit_button" class="button-1 button-bottom" onclick="submit()" type="button" tabindex="0" disabled></button><!-- Sign in -->
+                    <p class="username-p"></p><!-- Username -->
+                    <input class="ci-input" type="text" name="username" id="username" maxlength="40" required="true" value="@USERNAME@" autofocus/>
+                    <button id="submit_button" class="button-1 button-bottom" type="button" tabindex="0" disabled></button><!-- Sign in -->
                 </div>
-                <div class="layout-left" style="background-color:#1d3649;">
+                <div class="layout-left">
                     <div class="welcome-illustrations">
                         <div class="loader loader-dark hidden"></div>
                         <img src="@JUNCTION@/sps/static/design_images/credentials.svg" class="launch-animation" />
