--- a/html/C/authsvc/authenticator/ci/verify.html
+++ b/html/C/authsvc/authenticator/ci/verify.html
@@ -3,147 +3,35 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="/sps/static/design.css"></link>
-    <link rel="stylesheet" type="text/css" href="/sps/static/ci.css"></link>
-    <link rel="stylesheet" type="text/css" href="/sps/static/ci-popup.css"></link>
-    <script src="/sps/static/ciI18n.js"></script>
-    <script src="/sps/mga/user/mgmt/html/common.js" type="text/javascript"></script>
-    <script type="text/javascript">
-
-    var errorMsg = "@ERROR_MESSAGE@";
-
-    function populateStrings() {
-        document.title = ciMsg.authMethodVerification;
-        document.querySelector('h3').textContent = ciMsg.twoStepVeri;
-        document.querySelector('h1').textContent = ciMsg.letsMakeSure;
-        document.getElementById("otp").placeholder = ciMsg.accessTokenPlaceholder;
-        document.getElementById("verify_button").value = ciMsg.verify;
-        document.querySelectorAll("p")[2].textContent = ciMsg.accessCode;
-        document.querySelector("a").textContent = ciMsg.resendCode;
-
-        var correlation = "@CORRELATION@";
-        if(correlation != "") {
-            correlation += " -";
-        }
-
-        if("@TYPE@" == "smsotp" || "@TYPE@" == "transientsms") {
-            document.getElementById("instructions").textContent = ciMsg.smsVerificationInstructions;
-            document.getElementById("correlation").textContent = correlation;
-
-            document.getElementById("correlation").className = "textbox-left";
-            document.getElementById("otp").className = "textbox-right";
-
-            document.getElementById("verification_img").src = getJunctionName() + "/sps/static/design_images/credentials_bubble.svg";
-
-            document.querySelector("a").classList.remove("hidden");
-        } else if("@TYPE@" == "emailotp" || "@TYPE@" == "transientemail") {
-            document.getElementById("instructions").textContent = ciMsg.emailVerificationInstructions;
-            document.getElementById("correlation").textContent = correlation;
-
-            document.getElementById("correlation").className = "textbox-left";
-            document.getElementById("otp").className = "textbox-right";
-
-            document.getElementById("verification_img").src = getJunctionName() + "/sps/static/design_images/envelope-open.svg";
-
-            document.querySelector("a").classList.remove("hidden");
-        } else if("@TYPE@" == "totp") {
-            document.getElementById("instructions").textContent = ciMsg.verifyVerificationInstructions;
-            document.getElementById("otp").style["display"] = "block";
-        }
-    }
-
-    function checkValid(input) {
-        var valid = false;
-        var value = input.value;
-        if(value != null && value != "" && input.validity.valid) {
-            valid = true;
-        }
-        if(valid) {
-            if (input.classList.contains('input-invalid')) {
-                input.classList.remove('input-invalid');
-            }
-        } else {
-            input.classList.add('input-invalid');
-        }
-        document.getElementById("verify_button").disabled = !valid;
-
-        return valid;
-    }
-
-    function submit() {
-        var otpInput = document.getElementById("otp");
-        var otp = otpInput.value;
-
-        if(checkValid(otpInput, "otp")) {
-            document.querySelector(".loader").classList.remove('hidden');
-            document.getElementById("verification_img").classList.add('hidden');
-            document.getElementById("verifyForm").otp.value = otp;
-            document.getElementById("verifyForm").submit();
-        }
-    }
-
-    function resendCode() {
-        document.querySelector(".loader").classList.remove('hidden');
-        document.getElementById("verification_img").classList.add('hidden');
-        document.getElementById("resendForm").submit();
-    }
-
-    function cancel() {
-        document.querySelector(".loader").classList.remove('hidden');
-        document.getElementById("verification_img").classList.add('hidden');
-        document.getElementById("cancelForm").submit();
-    }
-
-    function startup() {
-        populateStrings();
-        if(errorMsg != null && errorMsg != "") {
-            var errorDiv = document.getElementById("error-msg");
-            errorDiv.textContent = errorMsg;
-            errorDiv.style = "color: #dc0000;";
-            errorDiv.classList.remove("hidden");
-            document.getElementById("instructions").classList.add("hidden");
-        }
-        var input = document.querySelector('#otp');
-        input.addEventListener("keyup", function(event) {
-            event.preventDefault();
-            // Enter key is 13, space is 32
-            if (event.keyCode === 13 || event.keyCode == 32) {
-                document.querySelector('#verify_button').click();
-            }
-        });
-    }
-    </script>
-
-    <style>
-        a {
-            color: #0F6DFF !important;
-            text-decoration: none;
-            font-size: 11pt;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link type="text/css" rel="stylesheet" type="text/css" href="/sps/static/design.css"></link>
+    <link type="text/css" rel="stylesheet" type="text/css" href="/sps/static/ci.css"></link>
+    <link type="text/css" rel="stylesheet" type="text/css" href="/sps/static/ci-popup.css"></link>
+    <link type="text/css" rel="stylesheet" href="/sps/static/css/ci/verify.css"></link>
+    <link type="text/css" rel="stylesheet" href="/sps/static/css/ci/common.css"></link>
+    
+    <script type="text/javascript" src="/sps/static/ciI18n.js"></script>
+    <script type="text/javascript" src="/sps/mga/user/mgmt/html/common.js"></script>
+  <script type="text/javascript" src="/sps/static/scripts/ci/verify.js" data-type="@TYPE@" data-error-message="@ERROR_MESSAGE@" data-correlation="@CORRELATION@"></script>
   </head>
-  <body onload="startup()">
-    <div id="dialog" style="z-index: 2000; box-sizing: initial; display: block;">
-        <div class="dialog-window" style="z-index: 2000;">
+  <body>
+    <div id="dialog">
+        <div class="dialog-window">
             <section id="download-section" class="dialog-content dialog-content--visible notransition">
                 <div class="layout-large-right">
                     <h3></h3><!-- Two-step verification -->
                     <h1></h1><!-- Let's make sure it's you -->
                     <p class="type-body-m" id="instructions"></p>
                     <p class="type-body-m"  id="error-msg" class="error-msg hidden"></p>
-                    <div style="height: 102px">
-                    <p style="margin-top:40px;margin-bottom:8px;font-size:8pt"></p><!-- Access Code -->
+                    <div class="otp-section">
+                      <p class="access-code-p"></p><!-- Access Code -->
                       <div id="correlation"></div>
-                      <input class="ci-input" type="number" placeholder="" name="otp" id="otp" maxlength="40" oninput="checkValid(this);"  style="width:80%;" autofocus/>
+                      <input class="ci-input" type="number" placeholder="" name="otp" id="otp" maxlength="40" autofocus/>
                     </div>
-                    <a class="hidden" href="javascript:void(0);" onclick="resendCode();"></a><!-- Resend code -->
-                    <input id="verify_button" class="button-1 button-bottom" type="submit" value="" onclick="submit();" disabled />
+                    <a class="hidden" href="#" id="resendCodeLink"></a><!-- Resend code -->
+                    <input id="verify_button" class="button-1 button-bottom" type="submit" value=""  disabled />
                 </div>
-                <div class="layout-left" style="background-color:#1d3649;">
-                    <a href="#" class="dialog-back dialog-back-light nav-sectionlink-back" title="Back" role="navigation" tabindex="50" onclick="cancel();" style="background-image: url('./static/design_images/back-light.svg');"></a>
+                <div class="layout-left">
+                    <a href="#" class="dialog-back dialog-back-light nav-sectionlink-back" title="Back" role="navigation" tabindex="50" id="dialog-back-button"></a>
                     <div class="welcome-illustrations">
                         <div class="loader loader-dark hidden"></div>
                         <img id="verification_img" src="@JUNCTION@/sps/static/design_images/credentials_devices.svg" class="launch-animation" />
