--- a/html/C/authsvc/authenticator/ci/wait.html
+++ b/html/C/authsvc/authenticator/ci/wait.html
@@ -4,47 +4,26 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>IBM Verify</title>
-    <link rel="stylesheet" type="text/css" href="/sps/static/design.css"></link>
-    <link rel="stylesheet" type="text/css" href="/sps/static/ci.css"></link>
-    <link rel="stylesheet" type="text/css" href="/sps/static/ci-popup.css"></link>
-    <script src="/sps/static/ciI18n.js"></script>
-    <script>
-    var pollTimer = null;
-
-    function cancel() {
-        if (pollTimer != null) {
-            window.clearTimeout(pollTimer);
-        }
-        document.getElementById("cancelForm").submit();
-    }
-
-    function populateStrings() {
-        document.title = ciMsg.ibmVerify;
-        document.querySelector('h3').textContent = ciMsg.twoStepVeri;
-        document.querySelector('h1').textContent = ciMsg.letsMakeSure;
-        document.getElementById("instructions").textContent = ciMsg.verifyInstructions;
-    }
-
-    function startup() {
-        populateStrings();
-
-        pollTimer = setTimeout(function () {
-            document.getElementById("pollForm").submit();
-        }, 2000);
-    }
-    </script>
+    <link type="text/css" rel="stylesheet" href="/sps/static/design.css"></link>
+    <link type="text/css" rel="stylesheet" href="/sps/static/ci.css"></link>
+    <link type="text/css" rel="stylesheet" href="/sps/static/ci-popup.css"></link>
+    <link type="text/css" rel="stylesheet" href="/sps/static/css/ci/wait.css"></link>
+    <link type="text/css" rel="stylesheet" href="/sps/static/css/ci/common.css"></link>
+    
+    <script type="text/javascript" src="/sps/static/ciI18n.js"></script>
+    <script type="text/javascript" src="/sps/static/scripts/ci/wait.js"></script>
   </head>
-  <body onload="startup()">
-    <div id="dialog" style="z-index: 2000; box-sizing: initial; display: block;">
-        <div class="dialog-window notransition" style="z-index: 2000;">
+  <body>
+    <div id="dialog">
+        <div class="dialog-window notransition">
             <section id="try-section" class="dialog-content dialog-content--visible notransition">
                 <div class="layout-large-right">
                     <h3></h3><!-- Two-step verification -->
                     <h1></h1><!-- Let's make sure it's you -->
                     <p id="instructions" class="type-body-m"></p><!-- We’ve sent a notification to your device. Simply approve the Sign-in to continue. If you haven’t received it yet, open IBM Verify. -->
                 </div>
-                <div class="layout-left" style="background-color:#1d3649;">
-                    <a href="#" class="dialog-back dialog-back-light nav-sectionlink-back" title="Back" role="navigation" tabindex="50" onclick="cancel();" style="background-image: url('./static/design_images/back-light.svg');"></a>
+                <div class="layout-left">
+                    <a href="#" id="cancel" class="dialog-back dialog-back-light nav-sectionlink-back" title="Back" role="navigation" tabindex="50"></a>
                     <div class="welcome-illustrations">
                         <div class="loader loader-dark"></div>
                     </div>
