--- a/html/C/authsvc/authenticator/ci/usc.html
+++ b/html/C/authsvc/authenticator/ci/usc.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Copyright contributors to the IBM Security Verify Access and Verify SaaS Strong Authentication Integration project. -->
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
