Update with 10.0.7 default pages and mapping rules

--- a/html/C/authsvc/authenticator/ci/authenticate_dialog.html
+++ b/html/C/authsvc/authenticator/ci/authenticate_dialog.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="/sps/mga/user/mgmt/html/common.js"></script>
     <script type="text/javascript" src="/sps/static/scripts/ci/authenticate_dialog.js" id="authenticate-methods-tag"
         data-hide-transient-if-enroll="@HIDE_TRANSIENT_IF_ENROLL@" data-expand-verify-methods="@EXPAND_VERIFY_METHODS@" 
-        data-jit-enrollment="@JIT_ENROLLMENT@">
+        data-jit-enrollment="@JIT_ENROLLMENT@" data-enabled-methods='@ENABLED_METHODS@'>
         {
             "authMethods":@AUTH_METHODS@,
             "signatureMethods":@SIGNATURE_METHODS@,
