Update with 11.0.0 default pages and mapping rules

--- a/html/C/authsvc/authenticator/ci/usc.html
+++ b/html/C/authsvc/authenticator/ci/usc.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Copyright contributors to the IBM Security Verify Access and Verify SaaS Strong Authentication Integration project. -->
+<!-- Copyright contributors to the IBM Verify Identity Access and Verify SaaS Strong Authentication Integration project. -->
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -24,7 +24,7 @@
             <header role="banner" >
                 <div class="header">
                     <div class="logo">
-                        IBM <b>Security Verify Access</b>
+                        IBM <b>Verify Identity Access</b>
                     </div>
                     <h2 class="light"></h2><!-- User Self Care -->
                 </div>
