--- a/html/C/authsvc/authenticator/ci/enrollment.html
+++ b/html/C/authsvc/authenticator/ci/enrollment.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<!-- Copyright contributors to the IBM Security Verify Access and Verify SaaS Strong Authentication Integration project. -->
+<!-- Copyright contributors to the IBM Verify Identity Access and Verify SaaS Strong Authentication Integration project. -->
 <html>
 
 <head>
