--- a/html/C/authsvc/authenticator/ci/error.html
+++ b/html/C/authsvc/authenticator/ci/error.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<!-- Copyright contributors to the IBM Security Verify Access and Verify SaaS Strong Authentication Integration project. -->
+<!-- Copyright contributors to the IBM Verify Identity Access and Verify SaaS Strong Authentication Integration project. -->
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
