--- a/html/C/authsvc/authenticator/ci/login.html
+++ b/html/C/authsvc/authenticator/ci/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<!-- Copyright contributors to the IBM Security Verify Access and Verify SaaS Strong Authentication Integration project. -->
+<!-- Copyright contributors to the IBM Verify Identity Access and Verify SaaS Strong Authentication Integration project. -->
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -21,7 +21,7 @@
                 <div class="layout-large-right">
                     <h3></h3><!-- Welcome! -->
                     <h1></h1><!-- Sign in -->
-                    <p id="instructions" class="type-body-m"></p><!-- Sign in with your IBM Security Verify credentials. -->
+                    <p id="instructions" class="type-body-m"></p><!-- Sign in with your IBM Verify credentials. -->
 
                     <p class="type-input-p"></p><!-- Username -->
                     <input class="ci-input" type="text" name="username" id="username" maxlength="40" value="@USERNAME@" autofocus/>
